objects/Gen23Driver__c.object
<CustomObject>
    <fields>
        <fullName>AOwnershipHistoryT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AOwnershipHistoryT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APartnerRelationshipT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>APartnerRelationshipT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ARelatedRelationshipsT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ARelatedRelationshipsT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountManagmentT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AccountManagmentT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountTeamT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AccountTeamT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AddressT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AddressT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssetT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AssetT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttachmentT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AttachmentT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CaseT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChildAccountsT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ChildAccountsT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CopyR1DetailsT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CopyR1DetailsT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CopyR2DetailsT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CopyR2DetailsT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventsT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>EventsT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarkScope__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Always True in Production</description>
        <inlineHelpText>Always True in Production</inlineHelpText>
        <label>MarkScope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotesT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>NotesT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>OpportunityT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartEL__c</fullName>
        <defaultValue>true</defaultValue>
        <label>StartEL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TasksT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>TasksT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TrainingT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>TrainingT</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>